# tree-sitter-expression

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  bak.js  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-expression.pc.in
bindings/c/tree_sitter/: tree-sitter-expression.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_expression/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterExpressionTests/: TreeSitterExpressionTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt
