[package]
name = "tree-sitter-expression"
description = "Expression language for Salesforce projects"
version = "0.1.0"
authors = ["Cesar Parra <cesar.parra@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "expression"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/cesarparra/expression"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
